--- a/static/css/style.css
+++ b/static/css/style.css
@@ -186,3 +186,8 @@ h2 {
     background-color: rgb(12, 25, 214);
     color: white;
  }
+
+.btn-edit {
+    background-color: red;
+    color: white;
+}
