--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -135,7 +135,7 @@ h2 {
     width: 100%;
     bottom: 0;
     height: 12%;
-    position: fixed;
+    
 }
 
 .footer li {
@@ -186,3 +186,8 @@ h2 {
     background-color: rgb(12, 25, 214);
     color: white;
  }
+
+.btn-edit {
+    background-color: red;
+    color: white;
+}
