--- a/reviews/templates/reviews/reviews_detail.html
+++ b/reviews/templates/reviews/reviews_detail.html
@@ -27,7 +27,7 @@
         </div>
     </div>
 
-    <!-- Displaying count of comments and likes -->
+    <!-- Displaying count of comments and  review likes -->
     <div class="row">
         <div class="col-12">
             <strong class="text-secondary">
