--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -41,19 +41,15 @@
 
 <!-- Gallery -->
 
-    <div class="row text-center gallery">
+    <div class="col-12 text-center">
 
-        <div class="col-12 text-center d-flex flex-row gallery-first">
+        <div class="row text-center d-flex flex-row gallery">
 
             <img src="{% static 'images/foto1.jpg' %}" class="about-gallery">
 
             <img src="{% static 'images/foto2.jpg' %}" class="about-gallery">
 
-            <img src="{% static 'images/foto3.jpg' %}" class="about-gallery">
-
-        </div>
-
-        <div class="col-12 text-center d-flex flex-row gallery-second">
+            <img src="{% static 'images/foto3.jpg' %}" class="about-gallery"> 
 
             <img src="{% static 'images/foto4.jpg' %}" class="about-gallery">
 
