--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -110,22 +110,21 @@ h2 {
 
 
 .about-gallery {
-    height: 250px;
-    width: 250px;
+    height: 300px;
+    width: 300px;
 }
 
 .gallery img {
-    padding-top: 15px;
-    margin-left:11%;
+    padding-left: 20px;
+    padding-top: 20px;
 }
 
-.gallery-first {
-    margin-right: 15%;
-}
-
-.gallery-second {
-    margin-right: 15%;
-    margin-bottom: 10%;
+.gallery {
+   width: 100%;
+   text-align: center;
+   margin-left: auto;
+   margin-right: auto;
+   padding-left: 5%;
 }
 
 /* footer */
