--- a/reviews/templates/reviews/reviews_detail.html
+++ b/reviews/templates/reviews/reviews_detail.html
@@ -34,7 +34,7 @@
                 <i class="far fa-comments"></i> {{ comment_count }}
             </strong>
             <strong class="text-secondary">
-              <i class="far fa-heart btn-like" name="review_id" type="submit"></i>{{ obj.likes.all.count }} likes
+            <a href=""><i class="far fa-heart btn-like" name="review_id" type="submit"></i></a>{{ obj.likes.all.count }} likes
             </strong>
             <strong class="text-secondary"> 
               <form method="POST" class="ui form">
