--- a/reviews/templates/reviews/add_review.html
+++ b/reviews/templates/reviews/add_review.html
@@ -10,7 +10,7 @@ Adding new review
         {% if user.is_authenticated %}
         <h3 class="text-decoration-underline">Add review:</h3>
         <p>Posting as: {{ user.username }}</p>
-        <form id="commentForm" method="post" style="margin-top: 1.3em;">
+        <form id="reviewForm" method="post" style="margin-top: 1.3em;">
             {{ review_form | crispy }}
             {% csrf_token %}
             <button id="submitButton" type="submit" class="btn btn-signup btn-lg">Submit</button>
@@ -19,9 +19,9 @@ Adding new review
         <p>Log in to leave review</p>
         {% endif %}
 
-        {% if user.is_authenticated and comment.author == user %}
-        <button class="btn btn-delete" comment_id="{{ comment.id }}">Delete</button>
-        <button class="btn btn-edit" comment_id="{{ comment.id }}">Edit</button>
+        {% if user.is_authenticated and review.author == user %}
+        <button class="btn btn-delete" review_id="{{ review.id }}">Delete</button>
+        <button class="btn btn-edit" review_id="{{ review.id }}">Edit</button>
         {% endif %}
     </div>
 </div>
