--- a/reviews/templates/reviews/add_review.html
+++ b/reviews/templates/reviews/add_review.html
@@ -4,11 +4,11 @@
 
 {% block content %}
 
-Adding new review 
+<!-- Adding new review --> 
 <div class="col-md-4 card mb-4 mt-3">
     <div class="card-body">
         {% if user.is_authenticated %}
-        <h3 class="text-decoration-underline">Add review:</h3>
+        <h3 class="text-decoration-underline">Add your review:</h3>
         <p>Posting as: {{ user.username }}</p>
         <form id="reviewForm" method="post" style="margin-top: 1.3em;">
             {{ review_form | crispy }}
