--- a/templates/base.html
+++ b/templates/base.html
@@ -46,9 +46,11 @@
             <a class="nav-link
               {% if request.path == about_url %}active{%endif%}" aria-current="page" href="{% url 'about' %}">About</a>
           </li>
-          
           {% if user.is_authenticated %}
-          
+          <li class="nav-item">
+            <a class="nav-link
+              {% if request.path == add_review_url %}active{%endif%}" aria-current="page" href="{% url 'add_review' %}">Add your review</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page"
               href="{% url 'account_logout' %}">Logout</a>
