--- a/reviews/templates/reviews/reviews_detail.html
+++ b/reviews/templates/reviews/reviews_detail.html
@@ -30,6 +30,26 @@
       </div>
     </div>
   </div>
+<!-- Delete confirmation modal for reviews -->
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteModalLabel">Delete review?</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete your review?
+        This action cannot be undone.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <a id="deleteConfirm" href="#" class="btn
+          btn-danger">Delete</a>
+      </div>
+    </div>
+  </div>
+</div> 
 
   <!-- Displaying count of comments and  review likes -->
   <div class="row">
@@ -93,7 +113,7 @@
     </div>
   </div>
 </div>
-<!-- Delete confirmation modal -->
+<!-- Delete confirmation modal for comments -->
 <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
