--- a/reviews/templates/reviews/reviews_detail.html
+++ b/reviews/templates/reviews/reviews_detail.html
@@ -24,8 +24,8 @@
           {{ review.content | safe }}
         </p>
         {% if user.is_authenticated and review.author == user %}
-        <button class="btn btn-delete" review_id="{{ review.id }}">Delete</button>
-        <button class="btn btn-edit" review_id="{{ review.id }}">Edit</button>
+        <button class="btn btn-delete review">Delete</button>
+        <button class="btn btn-edit review">Edit</button>
         {% endif %}
       </div>
     </div>
