--- a/reviews/templates/reviews/reviews_detail.html
+++ b/reviews/templates/reviews/reviews_detail.html
@@ -4,22 +4,23 @@
 
 
 {% block content %}
-<div class="masthead">
-  <div class="container">
-    <div class="row g-0">
-      <div class="col-12 masthead-image background-image text-center">
-        <img src="{% static 'images/background.jpg' %}" class="img-fluid rounded mx-auto d-block" alt="placeholder">
+<div>
+  <div class="masthead">
+    <div class="container">
+      <div class="row g-0">
+        <div class="col-12 masthead-image background-image text-center">
+          <img src="{% static 'images/background.jpg' %}" class="img-fluid rounded mx-auto d-block" alt="placeholder">
+        </div>
       </div>
     </div>
   </div>
-</div>
- <!-- Displaying Reviews -->
-<div class="container">
-  <div class="row">
-    <div class="col card mb-4  mt-3 left top">
-      <div class="card-body">
-        
-        
+  <!-- Displaying Reviews -->
+  <div class="container">
+    <div class="row">
+      <div class="col card mb-4  mt-3 left top">
+        <div class="card-body">
+
+
           <div class="col-md-6 masthead-text text-start">
             <p class="post-subtitle"><strong>{{ review.author }} | {{ review.created_on }}</strong></p>
           </div>
@@ -33,117 +34,119 @@
           <button class="btn btn-delete-review review" review_id="{{ review.id }}">Delete</button>
           <button class="btn btn-edit-review review" review_id="{{ review.id }}">Edit</button>
           {% endif %}
-      
-    </div>
-  </div>
-  <!-- Delete confirmation modal for reviews -->
-  <div class="modal fade" id="deleteModalReview" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="deleteModalLabel">Delete review?</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          Are you sure you want to delete your review?
-          This action cannot be undone.
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <a id="deleteConfirmReview" href="#" class="btn
-          btn-danger">Delete</a>
+
         </div>
       </div>
-    </div>
-  </div>
+      <!-- Delete confirmation modal for reviews -->
+      <div class="modal fade" id="deleteModalReview" tabindex="-1" aria-labelledby="deleteModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="deleteModalLabel">Delete review?</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              Are you sure you want to delete your review?
+              This action cannot be undone.
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <a id="deleteConfirmReview" href="#" class="btn
+          btn-danger">Delete</a>
+            </div>
+          </div>
+        </div>
+      </div>
 
-  <!-- Displaying count of comments and  review likes -->
-  <div class="row">
-    <div class="col-12">
-      <strong class="text-secondary">
-        <i class="far fa-comments"></i> {{ comment_count }}
-      </strong>
-    </div>
-  </div>
+      <!-- Displaying count of comments and  review likes -->
+      <div class="row">
+        <div class="col-12">
+          <strong class="text-secondary">
+            <i class="far fa-comments"></i> {{ comment_count }}
+          </strong>
+        </div>
+      </div>
 
-  <!-- Displaying Comments -->
-  <div class="row">
-    <div class="col-md-8 card mb-4  mt-3 ">
-      <h3 class="text-decoration-underline">Comments:</h3>
-      <div class="card-body">
+      <!-- Displaying Comments -->
+      <div class="row">
+        <div class="col-md-8 card mb-4  mt-3 ">
+          <h3 class="text-decoration-underline">Comments:</h3>
+          <div class="card-body">
 
-        {% for comment in comments %}
-        <div class="p-2 comments
+            {% for comment in comments %}
+            <div class="p-2 comments
           {% if not comment.approved and comment.author == user %}
           faded{% elif not comment.approved %} d-none{% endif %}">
-          <p class="font-weight-bold"><strong>
-              {{ comment.author }} |
-              <span class="font-weight-normal">
-                {{ comment.created_on }}
-              </span> wrote:</strong>
-          </p>
-          <div id="comment{{ comment.id }}">
-            {{ comment.body | linebreaks }}
+              <p class="font-weight-bold"><strong>
+                  {{ comment.author }} |
+                  <span class="font-weight-normal">
+                    {{ comment.created_on }}
+                  </span> wrote:</strong>
+              </p>
+              <div id="comment{{ comment.id }}">
+                {{ comment.body | linebreaks }}
 
+              </div>
+              {% if not comment.approved and comment.author == user %}
+              <p class="approval">
+                This comment is awaiting approval
+              </p>
+              {% endif %}
+              {% if user.is_authenticated and comment.author == user %}
+              <button class="btn btn-delete" comment_id="{{ comment.id }}">Delete</button>
+              <button class="btn btn-edit" comment_id="{{ comment.id }}">Edit</button>
+              {% endif %}
+            </div>
+            <hr>
+            <!-- Our for loop ends here -->
+            {% endfor %}
           </div>
-          {% if not comment.approved and comment.author == user %}
-          <p class="approval">
-            This comment is awaiting approval
-          </p>
-          {% endif %}
-          {% if user.is_authenticated and comment.author == user %}
-          <button class="btn btn-delete" comment_id="{{ comment.id }}">Delete</button>
-          <button class="btn btn-edit" comment_id="{{ comment.id }}">Edit</button>
-          {% endif %}
         </div>
-        <hr>
-        <!-- Our for loop ends here -->
-        {% endfor %}
+        <!-- Creating New Comments -->
+        <div class="col-md-4 card mb-4 mt-3">
+          <div class="card-body">
+            {% if user.is_authenticated %}
+            <h3 class="text-decoration-underline">Leave a comment:</h3>
+            <p>Posting as: {{ user.username }}</p>
+            <form id="commentForm" method="post" style="margin-top: 1.3em;">
+              {{ comment_form | crispy }}
+              {% csrf_token %}
+              <button id="submitButton" type="submit" class="btn btn-signup btn-lg">Submit</button>
+            </form>
+            {% else %}
+            <p>Log in to leave a comment</p>
+            {% endif %}
+          </div>
+        </div>
       </div>
     </div>
-    <!-- Creating New Comments -->
-    <div class="col-md-4 card mb-4 mt-3">
-      <div class="card-body">
-        {% if user.is_authenticated %}
-        <h3 class="text-decoration-underline">Leave a comment:</h3>
-        <p>Posting as: {{ user.username }}</p>
-        <form id="commentForm" method="post" style="margin-top: 1.3em;">
-          {{ comment_form | crispy }}
-          {% csrf_token %}
-          <button id="submitButton" type="submit" class="btn btn-signup btn-lg">Submit</button>
-        </form>
-        {% else %}
-        <p>Log in to leave a comment</p>
-        {% endif %}
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Delete confirmation modal for comments -->
-<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="deleteModalLabel">Delete comment?</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        Are you sure you want to delete your comment?
-        This action cannot be undone.
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <a id="deleteConfirm" href="#" class="btn
+    <!-- Delete confirmation modal for comments -->
+    <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="deleteModalLabel">Delete comment?</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            Are you sure you want to delete your comment?
+            This action cannot be undone.
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <a id="deleteConfirm" href="#" class="btn
           btn-danger">Delete</a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
+
+  {% endblock content %}
 
 
-{% endblock content %}
-
-{% block extras %}
-<script src="{% static 'js/comments.js' %}"></script>
-<script src="{% static 'js/reviews.js' %}"></script>
-{% endblock %}
+  {% block extras %}
+  <script src="{% static 'js/comments.js' %}"></script>
+  <script src="{% static 'js/reviews.js' %}"></script>
+  {% endblock %}
