--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -34,27 +34,36 @@
                 </ul>
             </div>
             <!-- Updated on field -->
-            <p class="text-end"><em>Updated on: 7.03.2024 {{ about.updated_on }}</em></p>
+            <p class="text-center"><em>Updated on: 7.03.2024 {{ about.updated_on }}</em></p>
         </div>
     </div>
 </div>
 
 <!-- Gallery -->
-    <div class="col-12">
-        <div class="row text-center d-flex flex-row gallery">
+<div class="container text-center">
+    <div class="row text-center d-flex flex-row gallery">
+        <div class="col-12 col-sm-4 col-md-4 col-lg-4">
             <img src="{% static 'images/foto1.jpg' %}" class="about-gallery">
-
+        </div>
+        <div class="col-12 col-sm-4 col-md-4 col-lg-4">
             <img src="{% static 'images/foto2.jpg' %}" class="about-gallery">
-
-            <img src="{% static 'images/foto3.jpg' %}" class="about-gallery"> 
-
+        </div>
+        <div class="col-12 col-sm-4 col-md-4 col-lg-4">
+            <img src="{% static 'images/foto3.jpg' %}" class="about-gallery">
+        </div>
+    </div>
+    <div class="row text-center d-flex flex-row gallery">
+        <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-lg-4">
             <img src="{% static 'images/foto4.jpg' %}" class="about-gallery">
-
+        </div>
+        <div class="col-12 col-sm-4 col-md-4 col-lg-4">
             <img src="{% static 'images/foto5.jpg' %}" class="about-gallery">
-
+        </div>
+        <div class="col-12 col-sm-4 col-md-4 col-lg-4">
             <img src="{% static 'images/foto6.jpg' %}" class="about-gallery">
         </div>
     </div>
-
 </div>
+
+
 {% endblock content %}
