--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -8,8 +8,11 @@
         <!-- Reviews Column -->
         <div class="col-12 mt-3 left">
             <div class="row">
-                <h2 class="text-center">Welcome to my Catch a <i class="fa-solid fa-dog" style="color: #2f15f4;"></i>
-                    website!<br>Here you can read all reviews or leave yours after logging in.</h2>
+                <h2 class="text-center text-decoration-underline">Welcome to my Catch a <i class="fa-solid fa-dog" style="color: #2f15f4;"></i>
+                    website!</h2><br><h3 class="text-center">A website dedicated to therapy and rehabilitation for animals. You can read and comment
+                    on others' reviews. If your dog or cat was my client and you want to share your opinion with others,
+                    please you are welcome to do so
+                    after logging in!</h3>
                 {% for reviews in object_list %}
                 <a href="{% url 'reviews_detail' reviews.id %}" class="reviews-link">
                     <div class="card mb-4">
@@ -17,7 +20,7 @@
                             <h3 class="text-decoration-underline">{{reviews}}</h3>
                             <p>{{reviews.content | safe}}</p>
                             <p class="card-text text-muted h6">{{ reviews.created_on}}</p>
-                        
+
                         </div>
                     </div>
             </div>
