--- a/reviews/templates/reviews/reviews_detail.html
+++ b/reviews/templates/reviews/reviews_detail.html
@@ -21,20 +21,20 @@
         
         {% if user.is_authenticated and review.author == user or user.is_superuser %}
         <!-- Display buttons for the review author -->
-        <button class="btn deleteReviewButtons review" review_id="{{ review.id }}">Delete</button>
-        <button class="btn editReviewButtons review reviewText editReviewButtons"
-          review_id="{{ review.id }}">Edit</button>
+        
+        <button class="btn btn-delete deleteReviewButtons review" review_id="{{ review.id }}">Delete</button>
+        <a href="?edit=1" class="btn btn-edit editReviewButtons">Edit</a>
         {% endif %}
       </div>
       <hr>
     </div>
+
     <!-- Creating form for updating review -->
+    {% if show_edit_form %}
     <div class="col-md-4 card mb-4 mt-3">
       <div class="card-body">
         {% if user.is_authenticated %}
-        {% if review.author == user or user.is_superuser %}
-        <!-- Form to edit the review if the user is the author -->
-        <h3 class="text-decoration-underline">Edit your review:</h3>
+        <h3 class="text-decoration-underline">Edit review:</h3>
         <p>Posting as: {{ user.username }}</p>
         <form id="reviewForm" method="post" enctype="multipart/form-data">
           {{ review_form | crispy }}
@@ -43,15 +43,11 @@
           <button type="submit" class="btn btn-signup btn-lg">Update</button>
         </form>
         {% else %}
-        <!-- Message if the user is logged in but not the author -->
-        <p>You can leave a comment on this review.</p>
-        {% endif %}
-        {% else %}
-        <!-- Message for not logged-in users -->
         <p>Log in to add or update your review</p>
         {% endif %}
       </div>
     </div>
+    {% endif %}
   </div>
 </div>
 
@@ -66,7 +62,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Are you sure you want to delete your review?
+        Are you sure you want to delete this review?
         This action cannot be undone.
       </div>
       <div class="modal-footer">
@@ -146,7 +142,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Are you sure you want to delete your comment?
+        Are you sure you want to delete this comment?
         This action cannot be undone.
       </div>
       <div class="modal-footer">
