--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -78,21 +78,10 @@
     <div class="row">
         <div class="col text-right">
             <div class="text-center fs-5 ">
-                <p><strong>If you want to get more information about therapy or make an appointment, please contact me
-                        by:</strong></p>
-                <ul class="text-center contact-about">
-                    <li class="text-center contact-email">email: justyna@gmail.com</li>
-                    <li class="text-center contact-facebook">
-                        <a href="https://www.facebook.com/zlappsafizjo" target="_blank" rel="noopener"
-                            aria-label="Visit-my-Facebook-page (opens in the new tab)">
-                            <i class="fa-brands fa-facebook fa-lg"></i>Facebook</a>
-                    </li>
-                    <li class="text-center contact-instagram">
-                        <a href="https://www.instagram.com/zlappsa/" target="_blank" rel="noopener"
-                            aria-label="Visit-my-Instagram-page (opens in the new tab)"><i
-                                class="fa-brands fa-instagram fa-lg"></i>Instagram</a>
-                    </li>
-                </ul>
+                <p><strong>If you want to get more information about therapy or make an appointment, 
+                    please use Contact Form. Thank You! 
+                </strong></p>  
+                
             </div>
             <!-- Updated on field -->
             <p class="text-center"><em>Updated on: 7.03.2024 {{ about.updated_on }}</em></p>
