--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -11,12 +11,14 @@
                 <h2 class="welcome-text text-decoration-underline mt-4 mb-5">Welcome to my <br>Catch a Dog<i
                         class="fa-solid fa-dog" style="color: #2f15f4;"></i>
                     website!</h2><br>
-                <h4 class="introduction text-center col-12 mt-3 col-md-6 col-lg-6">A website dedicated to therapy and rehabilitation for animals. You can
+                <h4 class="introduction text-center col-12 mt-3 col-md-6 col-lg-6">A website dedicated to therapy and
+                    rehabilitation for animals. You can
                     read and
-                    comment on others' reviews. On my website you can find all the necessary information but 
+                    comment on others' reviews. On my website you can find all the necessary information but
                     if you stil have any questions, please contact me.If your dog or cat was my client and you want
                     to share your opinion with others, please you are welcome to do so
-                    after logging in!<hr class="pb-4 mt-3">You can see all reviews below</h4>
+                    after logging in!<br>You can see all reviews below.</h4>
+
             </div>
         </div>
         <div class="col-12 mt-5">
